2006-04-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Remove unsafe loop optimizations with g++ 4.1; breaks standard library
 src/util.cxx:
  - Fixed conversion of non-negatable signed numbers (breaks with g++ 4.1)
 test/test000.cxx:
  - List tests as they proceed, to facilitate debugging
  - Use stringstreams as example for LONG_MIN/LONG_MAX strings
 test/test004.cxx, test/test006.cxx, test/test007.cxx, test/test013.cxx,
 test/test015.cxx, test/test017.cxx, test/test018.cxx, test/test023.cxx,
 test/test025.cxx, test/test026.cxx, test/test032.cxx, test/test034.cxx,
 test/test036.cxx, test/test037.cxx, test/test048.cxx, test/test050.cxx,
 test/test051.cxx, test/test052.cxx, test/test054.cxx, test/test057.cxx,
 test/test059.cxx, test/test065.cxx, test/test078.cxx, test/test079.cxx,
 test/test087.cxx:
  - Converted OnCommit()/OnAbort()/OnDoubt() to 2.x-style equivalents
2006-03-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed workaround code for missing PQexecPrepared()
2006-03-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/largeobject.hxx:
  - Fixed conversion warning, thanks Bart "what, AGAIN?" Samwel
2006-03-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Replaced AC_TRY_LINK loop for socket library with AC_SEARCH_LIBS
  - Should fix MinGW socket problems, thanks Bart "doesn't ring a bell" Samwel
2006-03-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Compile fix for change in subtransaction (Bart Samwel)
 include/pqxx/pipeline.hxx:
  - Previous Visual C++ fix broke compilers without "limits" header
 include/pqxx/prepared_statement.hxx:
  - Help older compilers disambiguate invocation operator() templates
 tools/maketestvcmak.pl, win32/common:
  - More little fixes by Bart "who was that again?" Samwel
 tools/preprelease:
  - Fix md5sum generation
 win32/common, win32/common-sample, win32/INSTALL.txt:
  - Updated with help from Alexandre Hanft