@@ -1,3 +1,6 @@
+2006-04-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ doc/libpqxx.xml:
+  - nontransaction is only faster when read-only, thanks Markus Schaber
 2006-04-01  Jeroen T. Vermeulen <jtv@xs4all.nl>
  configure.ac.in:
   - Remove unsafe loop optimizations with g++ 4.1; breaks standard library
